# materialxstubs

./: .gitignore  MANIFEST.in  README.md  build_backend.py  build_dist.sh  cleanup.sh  pyproject.toml  setup.sh  test_stub_discovery.py
.github/workflows/: main.yml
MaterialX/: PyMaterialXCore.pyi  PyMaterialXFormat.pyi  PyMaterialXGenGlsl.pyi  PyMaterialXGenMdl.pyi  PyMaterialXGenMsl.pyi  PyMaterialXGenOsl.pyi  PyMaterialXGenShader.pyi  PyMaterialXRender.pyi  PyMaterialXRenderGlsl.pyi  PyMaterialXRenderOsl.pyi  colorspace.pyi  datatype.pyi  main.pyi
MaterialX-stubs/: PyMaterialXCore.pyi  PyMaterialXFormat.pyi  PyMaterialXGenGlsl.pyi  PyMaterialXGenShader.pyi  PyMaterialXRender.pyi  PyMaterialXRenderMsl.pyi  __init__.pyi
MaterialX-stubs/_scripts/: creatematerial.pyi  generateshader.pyi  genmdl.pyi  mxdoc.pyi  mxvalidate.pyi
materialxstubs.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
